--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
 	id 'com.vaadin'
+	id 'idea'
 }
 
 repositories {
