--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@ build/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+#.idea
+#*.iws
+#*.iml
+#*.ipr
 out/
 
 ### NetBeans ###
